переходы на страницы

--- a/app/src/main/res/layout/learning.xml
+++ b/app/src/main/res/layout/learning.xml
@@ -259,6 +259,7 @@
                             </LinearLayout>
 
                             <FrameLayout
+                                android:id="@+id/btn_continue_test"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp">
