--- a/app/src/main/res/layout/bottom_nav.xml
+++ b/app/src/main/res/layout/bottom_nav.xml
@@ -48,8 +48,8 @@
             android:textSize="12sp"
             android:textColor="#666666" />
     </LinearLayout>
-
     <LinearLayout
+        android:id="@+id/examLayout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -79,7 +79,7 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_bookmark" />
+            android:src="@drawable/bookmark" />
 
         <TextView
             android:layout_width="wrap_content"
