--- a/app/src/main/res/layout/filling_test.xml
+++ b/app/src/main/res/layout/filling_test.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
@@ -34,131 +35,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/question">
 
-        <FrameLayout
+        <ToggleButton
+            android:id="@+id/answerA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
+            android:background="@drawable/toggle_answer_selector"
+            android:padding="16dp"
+            android:textOff="a. Sets are mutable."
+            android:textOn="a. Sets are mutable."
+            android:textAllCaps="false"
+            android:textColor="@xml/selector_answer_text" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bg_answer_neutral"
-                android:scaleType="centerCrop" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="16dp"
-                android:text="a. "
-                android:textColor="#000"
-                android:textSize="14sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="35dp"
-                android:layout_marginTop="10dp"
-                android:text="Sets are mutable."
-                android:textColor="#000000"
-                android:textSize="14sp" />
-        </FrameLayout>
-
-        <FrameLayout
+        <ToggleButton
+            android:id="@+id/answerB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
+            android:background="@drawable/toggle_answer_selector"
+            android:padding="16dp"
+            android:textOff="b. The order of elements in a set is significant."
+            android:textOn="b. The order of elements in a set is significant."
+            android:textAllCaps="false"
+            android:textColor="@xml/selector_answer_text" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bg_answer_selected"
-                android:scaleType="centerCrop" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="16dp"
-                android:text="b. "
-                android:textColor="#841FFD"
-                android:textSize="14sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="35dp"
-                android:paddingRight="100dp"
-                android:layout_marginTop="10dp"
-                android:text="The order of elements in a set is significant."
-                android:textColor="#841FFD"
-                android:textSize="14sp"
-                android:lineSpacingExtra="10dp" />
-        </FrameLayout>
-
-        <FrameLayout
+        <ToggleButton
+            android:id="@+id/answerC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
+            android:background="@drawable/toggle_answer_selector"
+            android:padding="16dp"
+            android:textOff="c. A set may contain elements that are mutable."
+            android:textOn="c. A set may contain elements that are mutable."
+            android:textAllCaps="false"
+            android:textColor="@xml/selector_answer_text" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bg_answer_selected"
-                android:scaleType="centerCrop" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="16dp"
-                android:text="c. "
-                android:textColor="#841FFD"
-                android:textSize="14sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="35dp"
-                android:paddingRight="100dp"
-                android:layout_marginTop="10dp"
-                android:text="A set may contain elements that are mutable."
-                android:textColor="#841FFD"
-                android:textSize="14sp"
-                android:lineSpacingExtra="10dp" />
-        </FrameLayout>
-
-        <FrameLayout
+        <ToggleButton
+            android:id="@+id/answerD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bg_answer_neutral"
-                android:scaleType="centerCrop" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="16dp"
-                android:text="d. "
-                android:textColor="#000"
-                android:textSize="14sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="35dp"
-                android:layout_marginTop="10dp"
-                android:text="A given element can’t appear in a set more than once."
-                android:textColor="#000"
-                android:textSize="14sp" />
-        </FrameLayout>
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/toggle_answer_selector"
+            android:padding="16dp"
+            android:textOff="d. A given element can’t appear in a set more than once."
+            android:textOn="d. A given element can’t appear in a set more than once."
+            android:textAllCaps="false"
+            android:textColor="@xml/selector_answer_text" />
     </LinearLayout>
 </merge>
