--- a/app/src/main/res/layout/info_test.xml
+++ b/app/src/main/res/layout/info_test.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +8,56 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
+    <LinearLayout
+        android:id="@+id/topBarLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#f2f3f7"
+        android:elevation="8dp"
+        android:gravity="center_vertical"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        android:paddingTop="30dp"
+        android:paddingBottom="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/backIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_back" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="AWS Certification"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/bookmark"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/bookmark" />
+    </LinearLayout>
+
     <ScrollView
+        android:id="@+id/contentScroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
+        app:layout_constraintBottom_toTopOf="@id/startTestContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -21,66 +66,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/topBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f2f3f7"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingStart="30dp"
-                android:paddingEnd="30dp"
-                android:paddingTop="30dp"
-                android:paddingBottom="5dp">
-
-                <ImageView
-                    android:id="@+id/backIcon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_back" />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="AWS Certification"
-                    android:textColor="#000000"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/bookmark"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/bookmark" />
-            </LinearLayout>
-
             <ImageView
-                android:id="@+id/imageLinearLayout"
+                android:id="@+id/imageHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:scaleType="fitStart"
-                android:src="@drawable/photo_video"
                 android:layout_marginTop="20dp"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart"
+                android:src="@drawable/photo_video" />
 
             <LinearLayout
                 android:id="@+id/timerContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:layout_marginTop="16dp"
@@ -94,7 +96,7 @@
                     android:layout_weight="0.8"
                     android:text="AWS Certification"
                     android:textSize="20sp"
-                    android:textColor="#000000" />
+                    android:textColor="#000" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -113,97 +115,113 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="6dp"
                         android:text="4.7"
-                        android:textColor="#000000"
+                        android:textColor="#000"
                         android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingStart="30dp">
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginBottom="20dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="18dp"
                         android:src="@drawable/number_question" />
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="10 Question"
-                        android:textSize="16sp" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10 point for a correct answer"
+                            android:text="10 Questions"
                             android:textSize="16sp"
-                            android:textColor="#999999"/>
+                            android:textColor="#000" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="10 points for a correct answer"
+                            android:textSize="16sp"
+                            android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginBottom="20dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="18dp"
                         android:src="@drawable/number_time" />
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1 hour 15 min"
-                            android:textSize="16sp" />
+                            android:text="1h 15m"
+                            android:textSize="16sp"
+                            android:textColor="#000" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Total duration of the quiz"
                             android:textSize="16sp"
-                            android:textColor="#999999"/>
+                            android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginBottom="20dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="18dp"
                         android:src="@drawable/number_star" />
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Win 10 star"
-                            android:textSize="16sp" />
+                            android:text="Win 10 stars"
+                            android:textSize="16sp"
+                            android:textColor="#000" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Answer all questions correctly"
                             android:textSize="16sp"
-                            android:textColor="#999999"/>
+                            android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -216,21 +234,24 @@
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:lineSpacingExtra="5dp" />
-        </LinearLayout>
             <TextView
                 android:id="@+id/instructionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:elevation="8dp"
                 android:layout_margin="24dp"
-                android:textColor="#000000"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:textColor="#000"
                 android:textSize="14sp"
                 android:lineSpacingExtra="4dp" />
         </LinearLayout>
     </ScrollView>
+
     <FrameLayout
+        android:id="@+id/startTestContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:clipChildren="false"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="70dp"
@@ -241,10 +262,6 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="-17dp"
-            android:layout_marginTop="-3dp"
-            android:layout_marginEnd="-20dp"
-            android:layout_marginBottom="-65dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/button_start_test" />
@@ -252,13 +269,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:gravity="center"
             android:text="Start test"
-            android:textColor="#FFFFFF"
+            android:textColor="#FFF"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:paddingTop="14dp"
-            android:paddingBottom="14dp"
-            android:textStyle="bold" />
+            android:paddingBottom="14dp" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
