--- a/app/src/main/res/layout/filling_test.xml
+++ b/app/src/main/res/layout/filling_test.xml
@@ -45,6 +45,7 @@
             android:textOff="a. Sets are mutable."
             android:textOn="a. Sets are mutable."
             android:textAllCaps="false"
+            android:gravity="start"
             android:textColor="@xml/selector_answer_text" />
 
         <ToggleButton
