--- a/app/src/main/res/layout/card_test.xml
+++ b/app/src/main/res/layout/card_test.xml
@@ -69,6 +69,8 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
                         android:src="@drawable/ic_trash" />
                 </RelativeLayout>
 
