--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="AWS Certification"
+        android:text=""
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -52,120 +52,41 @@
             android:src="@drawable/ic_timer" />
 
         <TextView
+            android:id="@+id/timerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:text="1:28"
-            android:textColor="#fff"
+            android:textColor="#FFFFFF"
             android:textSize="14sp" />
+
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/questionNumbers"
+    <!-- Вместо static LinearLayout -->
+    <HorizontalScrollView
+        android:id="@+id/scrollQuestionNumbers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fillViewport="false"
+        android:scrollbars="none"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintTop_toBottomOf="@id/backIcon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/backIcon">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/question12"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_selected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="12"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/question13"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_selected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="13"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/question14"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_selected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="14"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/question15"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_black"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="15"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/question16"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_unselected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="16"
-            android:textColor="#AAAAAA" />
-
-        <TextView
-            android:id="@+id/question17"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_circle_unselected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="17"
-            android:textColor="#AAAAAA" />
-
-        <TextView
-            android:id="@+id/question18"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/bg_circle_unselected"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:onClick="onQuestionNumberClicked"
-            android:text="18"
-            android:textColor="#AAAAAA" />
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/questionNumbersContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical" />
+    </HorizontalScrollView>
 
     <include
         layout="@layout/filling_test"
         android:id="@+id/questionContent"
-        app:layout_constraintTop_toBottomOf="@id/questionNumbers"
+        app:layout_constraintTop_toBottomOf="@id/scrollQuestionNumbers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -182,6 +103,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <FrameLayout
+            android:onClick="onPreviousClicked"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginEnd="8dp"
@@ -212,6 +134,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:onClick="onNextClicked"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
