--- a/app/src/main/res/layout/complete.xml
+++ b/app/src/main/res/layout/complete.xml
@@ -37,7 +37,6 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="AWS Certification"
             android:textColor="#000"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -82,12 +81,13 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/percentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="80%"
+                android:text="0%"
                 android:textColor="#841FFD"
-                android:textSize="36sp" />
+                android:textSize="36sp"
+                android:layout_marginTop="8dp" />
         </LinearLayout>
     </FrameLayout>
 
@@ -127,12 +127,12 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/correctCountText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="8/10 "
+                android:text="0/0 "
                 android:textColor="#841FFD"
                 android:textSize="16sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
