--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -152,6 +152,7 @@
                 android:src="@drawable/bg_button_next" />
 
             <TextView
+                android:id="@+id/nextButtonText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
