сделано продолжение теста, ревью мод и тд

--- a/app/src/main/res/layout/card_test.xml
+++ b/app/src/main/res/layout/card_test.xml
@@ -40,6 +40,7 @@
             android:padding="20dp">
 
             <ImageView
+                android:id="@+id/cardIcon"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -58,6 +59,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/cardTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="React JS"
@@ -82,6 +84,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/cardProgress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="8/10"
@@ -103,6 +106,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/cardRemaining"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="35min"
@@ -120,6 +124,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/cardProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
