--- a/app/src/main/res/layout/info_test.xml
+++ b/app/src/main/res/layout/info_test.xml
@@ -264,6 +264,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-15dp"
+            android:layout_marginEnd="-17dp"
+            android:layout_marginBottom="-70dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/button_start_test" />
