добавлено описание ответа и исправлен процент правильного ответа

--- a/app/src/main/res/layout/card_test.xml
+++ b/app/src/main/res/layout/card_test.xml
@@ -68,6 +68,7 @@
                         android:textStyle="bold" />
 
                     <ImageView
+                        android:id="@+id/cardDelete"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_alignParentEnd="true"
