--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="wrong_answer">#E04852</color>
     <color name="purple_200">#BB86FC</color>
     <color name="text_unselected">#000000</color>
+    <color name="gray">#797979</color>
 </resources>
 
