запилил дату для завершеного теста и стили и нижнее меню

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="purple_200">#BB86FC</color>
     <color name="text_unselected">#000000</color>
     <color name="gray">#797979</color>
+    <color name="secondary">#000000</color>
+    <color name="purple">#7B61FF</color>
 </resources>
 
